<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>maven-glassfish-blog</artifactId>
  <version>1.0</version>
  <packaging>war</packaging>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <arg>-Xlint:none</arg>
          </compilerArgs>
          <encoding>UTF-8</encoding>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <useIncrementalCompilation>false</useIncrementalCompilation>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-web-api</artifactId>
      <version>8.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.faces</groupId>
      <artifactId>jsf-api</artifactId>
      <version>2.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.1.Final</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.primefaces</groupId>
      <artifactId>primefaces</artifactId>
      <version>8.0</version>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <activation>
        <jdk>[1.8,9]</jdk>
      </activation>
      <id>java-8</id>

      <properties>
        <java.version>1.8</java.version>
      </properties>
    </profile>

    <profile>
      <activation>
        <jdk>[9,11]</jdk>
      </activation>
      <id>java-9</id>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <compilerArgs>
                <arg>--add-modules=java.xml,java.xml.bind</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>

      <properties>
        <java.version>9</java.version>
      </properties>
    </profile>

    <profile>
      <activation>
        <jdk>[11,)</jdk>
      </activation>
      <id>java-11</id>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <compilerArgs>
                <arg>--add-modules=java.xml</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>

      <properties>
        <java.version>11</java.version>
      </properties>
    </profile>

    <profile>
      <id>glassfish</id>

      <build>
        <plugins>
          <plugin>
            <groupId>org.glassfish.embedded</groupId>
            <artifactId>maven-embedded-glassfish-plugin</artifactId>
            <version>5.1</version>
            <configuration>
              <app>target/${project.artifactId}-${project.version}</app>
              <autoDelete>true</autoDelete>
              <contextRoot>/</contextRoot>
              <goalPrefix>embedded-glassfish</goalPrefix>
              <port>8080</port>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>run</goal>
                  <goal>deploy</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>tomee</id>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.tomee.maven</groupId>
            <artifactId>tomee-maven-plugin</artifactId>
            <version>8.0.5</version>
            <configuration>
              <path>/</path>
              <reloadOnUpdate>true</reloadOnUpdate>
              <synchronization>
                <extensions>
                  <extension>.class</extension>
                </extensions>
              </synchronization>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>run</goal>
                  <goal>deploy</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <properties>
    <java.version>1.5</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
</project>
